fix: fixed some bugs from WeeklyEvent systems